Fixed deletion modal z-index bug and added gender dropdown

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,7 @@ body {
 }
 
 .deletion-container {
+z-index: 1;
   padding: 16px;
   text-align: center;
 }
@@ -141,3 +142,6 @@ body {
     margin: 10px;
 }
 
+.photo-z-index {
+    z-index: 0;
+}
